# testQPsolvers

./: CMakeLists.txt  README.md
include/testQPsolvers/: eiquadprog.hpp  testQPsolvers.hpp
src/: main.cpp  testEigenEq.cpp  testMosek.cpp  testOOQP.cpp  testQpOases.cpp  testQuadProgPP.cpp
